syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "go/model/im";

enum Command {
	COMMAND_NONE       = 0;
	SEND_MESSAGE       = 1;
	FETCH_MESSAGES     = 2;
	REPORT_ABUSE       = 3;
	SWITCH_LANGUAGE    = 4;
	SUBSCRIBE_CHAT     = 5;
	UNSUBSCRIBE_CHAT   = 6;
	PING               = 7;
	FETCH_OTHER_ORDERS = 8;
	PUSH_MESSAGE       = 100;
	USER_STATUS        = 200;
}

enum Language {
	DEFAULT = 0;
	ZH_CN   = 1;
	ZH_HK   = 2;
	EN_US   = 3;
	MS_MY   = 4;
	ID_ID   = 5;
	VI_VN   = 7;
	HI_IN   = 8;
	JA_JP   = 9;
	KO_KR   = 10;
	TH_TH   = 11;
	PT_PT   = 12;
}

message Request {
	string              reqId   = 1;
	Command             command = 2;
	google.protobuf.Any data    = 3;
}

message Push {
	string              reqId   = 1;
	Command             command = 2;
	int32               code    = 3;
	string              msg     = 4;
	google.protobuf.Any data    = 5;
}

message ChatIdsWrapper {
	repeated string chatIds = 1;
}

message PushMessageEntityWrapper {
	repeated PushMessageEntity pushMessageEntity = 1;
}

enum ContentType {
	CONTENT_TYPE_NONE = 0;
	CHAT              = 1;
	ORDER             = 2;
	ANCHOR_HOST       = 3;
	ANCHOR_MEMBER     = 4;
}
enum Visible {
	VISIBLE_NONE = 0;
	ALL          = 1;
	SENDER       = 2;
}

message RequestMessageEntity {
	ContentType contentType = 1; // content 屬於哪種類型
	string      chatId      = 2; // 聊天室id
	int32       iid         = 3; // 賽事id
	int64       replyTo     = 4; // 回覆的訊息id
	string      content     = 5;
}

message PushMessageEntity {
	int64       msgId       = 1;
	ContentType contentType = 2;
	int64       vdId        = 3;
	string      sender      = 4;
	string      senderName  = 5;
	bool        isSelf      = 6;
	string      chatId      = 7;
	int32       iid         = 8;
	int32       vip         = 9;
	string      avatar      = 10;
	int64       replyTo     = 11;
	string      content     = 12;
	Visible     visible     = 13;
	int64       timestamp   = 14;
}

message FetchArgs {
	int64  pointer = 1;
	string chatId  = 2;
}

message ReportAbuseArgs {
	int64  userId = 1;
	string reason = 2;
}

message Notify {
	Command             command = 1;
	google.protobuf.Any data    = 2;
}

message UserStatus {
	string name   = 1;
	int64  vdId   = 2;
	int32  status = 3;
}

message SwitchLanguageArg {
	string language = 1;
}

message Group {
	int64  id          = 1;
	string name        = 2;
	string iconUrl     = 3;
	int32  memberCount = 4;
	int32  deleted     = 5;
}

message GroupsWrapper {
	repeated Group groups = 1;
}

message UserGroupStateArg {
	enum StateType {
		STATE_TYPE_NONE = 0;
		REGISTRATION    = 1;
		CANCELLATION    = 2;
	}

	int64     userId  = 2;
	int64     groupId = 3;
	StateType Status  = 4;
}

message FetchOtherOrders {
	int64  vdId          = 1;
	string sender        = 2;
	string chatId        = 3;
	int32  iid           = 4;
}
